Dodano plik nagłówkowy ColliderTypes oraz usunięto operacje sprawdzania kolizji z PhysicsSystem
1. Typy colliderów przeniesiono do oddzielnego pliku nagłówkowego.
2. Metody dotyczące sprawdzania kolizji przeniesiono z PhysicsSystem do Collision jako metody statyczne.

--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="BoneAnimation.h" />
     <ClInclude Include="BufferContainer.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="ColliderTypes.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Component.h" />
