--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -175,7 +175,6 @@
     <ClInclude Include="ReadData.h">
       <Filter>Inc</Filter>
     </ClInclude>
-    <ClInclude Include="LightSystem.h" />
     <ClInclude Include="RenderableComponent.h">
       <Filter>Inc</Filter>
     </ClInclude>
@@ -183,6 +182,9 @@
       <Filter>Inc</Filter>
     </ClInclude>
     <ClInclude Include="OctTree.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="LightSystem.h">
       <Filter>Inc</Filter>
     </ClInclude>
   </ItemGroup>
@@ -316,7 +318,6 @@
     <ClCompile Include="ToonEffect.cpp">
       <Filter>Src</Filter>
     </ClCompile>
-    <ClCompile Include="LightSystem.cpp" />
     <ClCompile Include="RenderableComponent.cpp">
       <Filter>Src</Filter>
     </ClCompile>
@@ -324,6 +325,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="OctTree.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="LightSystem.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
