Light System and Light Component
Dodałem LightSytem i LightComponent, możemy aktualizować jakieś światło (3 światła obecnie w scenie są statyczne, a czwarte światło przyjmuje ciągle pozycję postaci (czerwone światło)). Póki co możemy aktualizować tylko pozycję, ale dodanie innych opcji (jeśli będą kiedyś potrzebne) to sekunda roboty. Światło nie pada jeszcze prawidłowo na model dynamiczny bo on ma trochę inną strukturę w kodzie, ale naprawię to na dniach bo i tak będę poprawiał animację jego.

--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -190,6 +190,9 @@
     <ClInclude Include="ColliderTypes.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="LightComponent.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -331,6 +334,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="LightSystem.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="LightComponent.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
