--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -174,6 +174,8 @@
     <ClInclude Include="GameException.h" />
     <ClInclude Include="Keyframe.h" />
     <ClInclude Include="LightSystem.h" />
+    <ClInclude Include="MapEdge.h" />
+    <ClInclude Include="MapTile.h" />
     <ClInclude Include="MaterialSK.h" />
     <ClInclude Include="MatrixHelper.h" />
     <ClInclude Include="MeshSK.h" />
@@ -181,6 +183,7 @@
     <ClInclude Include="ModelSK.h" />
     <ClInclude Include="ModelSkinned.h" />
     <ClInclude Include="MyGame.h" />
+    <ClInclude Include="NavMesh.h" />
     <ClInclude Include="OctTree.h" />
     <ClInclude Include="Pass.h" />
     <ClInclude Include="pch.h" />
@@ -199,6 +202,7 @@
     <ClInclude Include="StepTimer.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="Technique.h" />
+    <ClInclude Include="Terrain.h" />
     <ClInclude Include="ToonEffect.h" />
     <ClInclude Include="ToonFactory.h" />
     <ClInclude Include="Transform.h" />
@@ -248,6 +252,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MapEdge.cpp" />
+    <ClCompile Include="MapTile.cpp" />
     <ClCompile Include="MaterialSK.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
@@ -270,6 +276,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="NavMesh.cpp" />
     <ClCompile Include="OctTree.cpp" />
     <ClCompile Include="Pass.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
@@ -297,6 +304,7 @@
     </ClCompile>
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="ToonEffect.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
