--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -309,6 +309,9 @@
     <ClCompile Include="OctTree.cpp">
       <Filter>Src</Filter>
     </ClCompile>
+    <ClCompile Include="ColliderTypes.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
