Aktualizacja plików konfiguracyjnych projektu

--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -333,11 +333,13 @@
     <ClCompile Include="OctTree.cpp">
       <Filter>Src</Filter>
     </ClCompile>
-    <ClCompile Include="ColliderTypes.cpp">
     <ClCompile Include="LightSystem.cpp">
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="LightComponent.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="ColliderTypes.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
