Dodano tryb rysowania granic drzewa ósemkowego i colliderów
1. Klasa DebugDraw zawiera operacje rysowania obrysów  box'ów, sfer oraz drzewa ósemkowego wraz z jego obszarem.
2. Renderable system zawiera wskaźnik do obiektu DebugDraw przez który można używać operacji klasy.
3. Po wciśnięciu V włączamy/wyłączamy rysowanie drzewa ósemkowego.
4. Przyciskiem B włączamy/wyłączamy obrys regionów drzewa ósemkowego. W takiej sytuacji będą rysowane tylko obrysy colliderów obiektów.
5. Rzucanie ray'a po kliknięciu środkowego przycisku myszki przerzuciłem na klawisz (jbc nie uwzględniałem tego klawisza w bindach tylko na szybko sprawdzam stan przycisku w instrukcji if w UpdateObjects.

--- a/rh-/rh-/rh-.vcxproj
+++ b/rh-/rh-/rh-.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="BufferContainer.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ColliderTypes.h" />
+    <ClInclude Include="DebugDraw.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Component.h" />
@@ -232,6 +233,7 @@
     <ClCompile Include="Camera.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="DebugDraw.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Component.cpp" />
