--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -199,6 +199,9 @@
     <ClInclude Include="LightComponent.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="DebugDraw.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -349,6 +352,9 @@
     <ClCompile Include="MapEdge.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="LightComponent.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="DebugDraw.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
