Working World with master

--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -178,19 +178,22 @@
     <ClInclude Include="ColliderTypes.h">
       <Filter>Inc</Filter>
     </ClInclude>
-    <ClInclude Include="NavMesh.h">
-      <Filter>Inc</Filter>
-    </ClInclude>
-    <ClInclude Include="MapTile.h" />
-    <ClInclude Include="MapEdge.h" />
-    <ClInclude Include="Terrain.h" />
     <ClInclude Include="LightComponent.h">
       <Filter>Inc</Filter>
     </ClInclude>
     <ClInclude Include="World.h">
       <Filter>Inc</Filter>
     </ClInclude>
-    <ClInclude Include="DebugDraw.h">
+    <ClInclude Include="Terrain.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="MapEdge.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="NavMesh.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="MapTile.h">
       <Filter>Inc</Filter>
     </ClInclude>
   </ItemGroup>
@@ -324,12 +327,6 @@
     <ClCompile Include="LightSystem.cpp">
       <Filter>Src</Filter>
     </ClCompile>
-    <ClCompile Include="NavMesh.cpp">
-      <Filter>Src</Filter>
-    </ClCompile>
-    <ClCompile Include="MapTile.cpp" />
-    <ClCompile Include="MapEdge.cpp" />
-    <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="LightComponent.cpp">
       <Filter>Src</Filter>
     </ClCompile>
@@ -337,6 +334,18 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="DebugDraw.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="Terrain.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="NavMesh.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="MapTile.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="MapEdge.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -356,21 +365,6 @@
     <Image Include="cat.DDS">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="Resources\UISprites\fpsbar.DDS">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Resources\UISprites\hp_bar.DDS">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Resources\UISprites\Menu.DDS">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Resources\UISprites\health.DDS">
-      <Filter>Assets</Filter>
-    </Image>
-    <Image Include="Resources\UISprites\hero.DDS">
-      <Filter>Assets</Filter>
-    </Image>
   </ItemGroup>
   <ItemGroup>
     <Manifest Include="settings.manifest">
@@ -384,10 +378,6 @@
     </None>
     <None Include="content\Shaders\Include\Common.fxh">
       <Filter>Inc\Shaders\Include</Filter>
-    </None>
-    <None Include="WallExpo.cmo" />
-    <None Include="Resources\Fonts\fpsFont.spritefont">
-      <Filter>Assets</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
