SImple shadow mapping

--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -196,6 +196,15 @@
     <ClInclude Include="MapTile.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="ShadowEffect.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ShadowFactory.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
+    <ClInclude Include="ShadowMap.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -348,6 +357,15 @@
     <ClCompile Include="MapEdge.cpp">
       <Filter>Src</Filter>
     </ClCompile>
+    <ClCompile Include="ShadowEffect.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="ShadowFactory.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="ShadowMap.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resource.rc" />
@@ -379,6 +397,15 @@
     <None Include="content\Shaders\Include\Common.fxh">
       <Filter>Inc\Shaders\Include</Filter>
     </None>
+    <None Include="FloorToRoom.cmo">
+      <Filter>Assets</Filter>
+    </None>
+    <None Include="FloorToRoom.mtl">
+      <Filter>Assets</Filter>
+    </None>
+    <None Include="content\Shaders\Include\ShadowMap.fx">
+      <Filter>Inc\Shaders\Include</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="content\Shaders\PixelShader.hlsl">
@@ -388,6 +415,18 @@
       <Filter>Inc\Shaders</Filter>
     </FxCompile>
     <FxCompile Include="content\Shaders\SkinnedModel.fx">
+      <Filter>Inc\Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="content\Shaders\PSShadowMap.hlsl">
+      <Filter>Inc\Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="content\Shaders\PSToonShader.hlsl">
+      <Filter>Inc\Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="content\Shaders\VSShadowMap.hlsl">
+      <Filter>Inc\Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="content\Shaders\VSToonShader.hlsl">
       <Filter>Inc\Shaders</Filter>
     </FxCompile>
   </ItemGroup>
