--- a/rh-/rh-/rh-.vcxproj.filters
+++ b/rh-/rh-/rh-.vcxproj.filters
@@ -205,6 +205,9 @@
     <ClInclude Include="ShadowMap.h">
       <Filter>Inc</Filter>
     </ClInclude>
+    <ClInclude Include="WorldLoader.h">
+      <Filter>Inc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp">
@@ -364,6 +367,9 @@
       <Filter>Src</Filter>
     </ClCompile>
     <ClCompile Include="ShadowMap.cpp">
+      <Filter>Src</Filter>
+    </ClCompile>
+    <ClCompile Include="WorldLoader.cpp">
       <Filter>Src</Filter>
     </ClCompile>
   </ItemGroup>
